[FIX] Fix type in uart driver, Fix dtsi folder

--- a/axi-uartlite-kernel-driver/dtsi/system-user.dtsi
+++ b/axi-uartlite-kernel-driver/dtsi/system-user.dtsi
@@ -1,5 +1,11 @@
 /include/ "system-conf.dtsi"
 
 &axi_uartlite_0 {
-    compatible = "<owner>,customuart";
+    compatible = "harel,customuart";
 };
+
+/* 
+&device_node {
+    compatible(driver) = "<owner>,<driver_name>"
+};
+*/
